fixed spacing for about me section

--- a/final.resume/style.css
+++ b/final.resume/style.css
@@ -2,24 +2,33 @@
     width:100%;
 }
 #headshot{
-    padding-right: 25px;
-    padding-left: 25px;
-    padding-bottom:25px;
     width: 25em;
     margin:0 auto;
+    padding-bottom: 2em;
 }
 #firstsec{
-    padding-top: 25px;
+    padding-top: 2em;
     background-color: #6da65b;
+}
+#am.title{
+    padding-left: 10em;
 }
 #intro{
     font-family: 'Times New Roman', Times, serif;
     color:white;
+    max-width: 40em;
 }
 h1{
     font-family: 'Times New Roman', Times, serif;
     color: white;
 }
 #navbar{
-    background-color: #6da65b;
+    background-color: #789f6c;
+}
+#navname{
+    font-family: 'Times New Roman', Times, serif;
+    color: #6da65b;
+}
+.nav-item{
+    font-family: 'Times New Roman', Times, serif;
 }
